@@ -26,6 +26,7 @@ import com.jeff_media.updatechecker.UserAgentBuilder;
 import io.github.rypofalem.armorstandeditor.Metrics.*;
 import io.github.rypofalem.armorstandeditor.language.Language;
 
+import io.papermc.lib.PaperLib;
 import org.bukkit.*;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
@@ -60,7 +61,8 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     public boolean hasFolia = false;
     String nmsVersionNotLatest = null;
 
-    String aseVersion;
+    //Hardcode the ASE Version
+    public static final String ASE_VERSION = "1.21.7-49";
     public static final String SEPARATOR_FIELD = "================================";
 
     public PlayerEditorManager editorManager;
@@ -128,12 +130,9 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         if (!Scheduler.isFolia())
             scoreboard = Objects.requireNonNull(this.getServer().getScoreboardManager()).getMainScoreboard();
 
-        // Get ASEs Version Number from the config....
-        aseVersion = this.getConfig().getString("version");
-
         //Load Messages in Console
         getLogger().info("======= ArmorStandEditor =======");
-        getLogger().info("Plugin Version: v" + aseVersion);
+        getLogger().info("Plugin Version: v" + ASE_VERSION);
 
         //Spigot Check
         hasSpigot = getHasSpigot();
@@ -341,7 +340,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     }
 
     private void runUpdateCheckerConsoleUpdateCheck() {
-        if (getArmorStandEditorVersion().contains(".x")) {
+        if (ASE_VERSION.contains(".x")) {
             getLogger().warning("Note from the development team: ");
             getLogger().warning("It appears that you are using the development version of ArmorStandEditor");
             getLogger().warning("This version can be unstable and is not recommended for Production Environments.");
@@ -360,7 +359,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     }
 
     private void runUpdateCheckerWithOPNotifyOnJoinEnabled() {
-        if (getArmorStandEditorVersion().contains(".x")) {
+        if (ASE_VERSION.contains(".x")) {
             getLogger().warning("Note from the development team: ");
             getLogger().warning("It appears that you are using the development version of ArmorStandEditor");
             getLogger().warning("This version can be unstable and is not recommended for Production Environments.");
@@ -381,33 +380,44 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
 
     //Implement Glow Effects for Wolfstorm/ArmorStandEditor-Issues#5 - Add Disable Slots with Different Glow than Default
     private void registerScoreboards(Scoreboard scoreboard) {
-        for (String teamToBeRegistered : asTeams) {
-            scoreboard.registerNewTeam(teamToBeRegistered);
-            team = scoreboard.getTeam(teamToBeRegistered);
-            if (team != null) {
-                if (teamToBeRegistered == lockedTeam) {
-                    getServer().getLogger().info("Registering Scoreboards required for Glowing Effects when Disabling Slots...");
-                    scoreboard.getTeam(teamToBeRegistered).setColor(ChatColor.RED);
-                }
-            } else {
-                getServer().getLogger().info("Scoreboard for Team '" + teamToBeRegistered + "' Already exists. Continuing to load");
-            }
+        getServer().getLogger().info("Registering Scoreboards required for Glowing Effects");
 
+        //Register the In Use Team First - It doesnt require a Glow Effect
+        // Add better handing for InUse already there. This should stop the errors re - Team already registered appearing
+        if(scoreboard.getTeam(inUseTeam) == null) {
+            scoreboard.registerNewTeam(inUseTeam);
+        } else {
+            getServer().getLogger().info("Scoreboard for AS-InUse Already exists. Continuing to load");
         }
+
+        //Fix for Scoreboard Issue reported by Starnos - Wolfst0rm/ArmorStandEditor-Issues/issues/18
+        if (scoreboard.getTeam(lockedTeam) == null) {
+            scoreboard.registerNewTeam(lockedTeam);
+            scoreboard.getTeam(lockedTeam).setColor(ChatColor.RED);
+        } else {
+            getServer().getLogger().info("Scoreboard for ASLocked Already exists. Continuing to load");
+        }
+
     }
 
     private void unregisterScoreboards(Scoreboard scoreboard) {
         getLogger().info("Removing Scoreboards required for Glowing Effects when Disabling Slots...");
-        for (String teamToBeRegistered : asTeams) {
-            team = scoreboard.getTeam(teamToBeRegistered);
-            if (team != null) {
-                team.unregister();
-            } else {
-                getServer().getLogger().severe("Team '" + teamToBeRegistered + "' already appears to be removed. Avoid manual removal to prevent errors!");
-            }
+
+        // Locked Team Removal
+        team = scoreboard.getTeam(lockedTeam);
+        if (team != null) { //Basic Sanity Check to ensure that the team is there
+            team.unregister();
+        } else {
+            getLogger().severe("Team Already Appears to be removed. Please do not do this manually!");
         }
 
-
+        //ASE-InUse Team Removal
+        team = scoreboard.getTeam(inUseTeam);
+        if (team != null) { //Basic Sanity Check to ensure that the team is there
+            team.unregister();
+        } else {
+            getLogger().severe("Team Already Appears to be removed. Please do not do this manually!");
+        }
     }
 
     private void updateConfig(String folder, String config) {
@@ -419,7 +429,9 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     @Override
     public void onDisable() {
         for (Player player : Bukkit.getServer().getOnlinePlayers()) {
-            if (player.getOpenInventory().getTopInventory().getHolder() == editorManager.getMenuHolder()) player.closeInventory();
+            if (PaperLib.getHolder(player.getOpenInventory().getTopInventory(), false).getHolder() == editorManager.getMenuHolder()) {
+                player.closeInventory();
+            }
         }
 
         if (!hasFolia) {
@@ -466,10 +478,6 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
     //Will be useful for later.....
     public String getMinecraftVersion() {
         return this.nmsVersion;
-    }
-
-    public String getArmorStandEditorVersion() {
-        return getConfig().getString("version");
     }
 
     public boolean getArmorStandVisibility() {
@@ -658,7 +666,7 @@ public class ArmorStandEditorPlugin extends JavaPlugin {
         enablePerWorld = getConfig().getBoolean("enablePerWorldSupport", false);
         if (enablePerWorld) {
             allowedWorldList = getConfig().getList("allowed-worlds", null);
-            if (allowedWorldList != null && allowedWorldList.get(0).equals("*")) {
+            if (allowedWorldList != null && allowedWorldList.getFirst().equals("*")) {
                 allowedWorldList = getServer().getWorlds().stream().map(World::getName).toList();
             }
         }
